[project]
name = "shakebeng"
version = "0.1.0"
description = "Neural Probabilistic Language Model for Shakespeare Text Generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "requests>=2.32.3",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
